# dear-imgui.hs

./: .gitignore  ChangeLog.md  LICENSE  Main.hs  README.md  Setup.hs  cabal.project  dear-imgui.cabal  default.nix  hs-dear-imgui.cabal  shell.nix
.github/workflows/: build.yaml
examples/: Readme.hs
examples/fonts/: Main.hs
examples/glfw/: Main.hs
examples/sdl/: Image.hs  Renderer.hs
examples/sdl3/: Renderer.hs
examples/vulkan/: Attachments.hs  Backend.hs  Input.hs  Main.hs  Util.hs
generator/DearImGui/: Generator.hs
generator/DearImGui/Generator/: Parser.hs  Tokeniser.hs  Types.hs
nix/: sources.json
src/: DearImGui.hs
src/DearImGui/: Context.hs  Enums.hs  FontAtlas.hs  Fonts.hs  GLFW.hs  OpenGL.hs  OpenGL2.hs  OpenGL3.hs  Raw.hs  SDL.hs  SDL3.hs  Structs.hs  Vulkan.hs
src/DearImGui/GLFW/: OpenGL.hs  Vulkan.hs
src/DearImGui/Internal/: Text.hs
src/DearImGui/Raw/: Context.hs  DragDrop.hs  DrawList.hs  Font.hs  FontConfig.hs  Fonts.hs  GlyphRangesBuilder.hs  IO.hs  ListClipper.hs
src/DearImGui/Raw/Font/: Config.hs  GlyphRanges.hs
src/DearImGui/SDL/: OpenGL.hs  Renderer.hs  Vulkan.hs
src/DearImGui/SDL3/: Renderer.hs
src/DearImGui/Vulkan/: Types.hs
